--- a/W-Home.html
+++ b/W-Home.html
@@ -6,6 +6,19 @@
   
   <body>
     Hey Ya! World
+# Header 1
+## Header 2
+### Header 3
+
+- Bulleted
+- List
+
+1. Numbered
+2. List
+
+**Bold** and _Italic_ and `Code` text
+
+[Link](url) and ![Image](src)
   </body>
 </html>
 
